--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -32,20 +32,6 @@
     margin: 0px;
     font-size: 16px;
   }
-
-  @media screen and (max-width: 600px) {
-    display: flex;
-    flex-direction: column;
-    font-size: 4vw;
-
-    select {
-      font-size: 4vw;
-    }
-
-    button {
-      display: none;
-    }
-  }
 }
 
 .categoryButtonWrapper {
@@ -60,6 +46,20 @@
       margin-bottom: 24px;
       width: 5vw;
       height: 24px;
+    }
+  }
+
+  @media screen and (max-width: $media-phone) {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    & > div {
+      & > button {
+        margin-bottom: 0px;
+        width: 12px;
+        height: 24px;
+      }
     }
   }
 }
