--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -44,22 +44,26 @@
   & > div {
     & > button {
       margin-bottom: 24px;
-      width: 5vw;
+      width: 24px;
       height: 24px;
     }
   }
 
   @media screen and (max-width: $media-phone) {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
+    margin: 0px;
 
     & > div {
       & > button {
         margin-bottom: 0px;
-        width: 12px;
-        height: 24px;
       }
+    }
+
+    & > span {
+      font-size: 12px;
     }
   }
 }
