--- a/styles/CommentBox.module.scss
+++ b/styles/CommentBox.module.scss
@@ -9,16 +9,31 @@
   & > div:first-child {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
+    width: 98%;
     height: 40px;
 
     & > input {
       min-width: calc(100% - 80px - 10vw);
+      height: 100%;
     }
 
     & > button {
-      width: 96px;
+      width: 48px;
+      height: 48px;
       margin: 0px;
+    }
+
+    @media screen and (max-width: $media-phone) {
+      & > input {
+        height: 80%;
+      }
+
+      & > button {
+        width: 32px;
+        height: 32px;
+        // margin: 0px;
+      }
     }
   }
 }
@@ -26,6 +41,7 @@
 .commentsWrapper {
   width: 100%;
   padding: 0px;
+  margin-top: 12px;
 }
 
 .comment {
