--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -42,6 +42,9 @@
   margin-left: 36px;
 
   & > div {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     & > button {
       margin-bottom: 24px;
       width: 24px;
