--- a/styles/CommentBox.module.scss
+++ b/styles/CommentBox.module.scss
@@ -60,8 +60,9 @@
   }
 
   & > span {
-    margin-left: 12px;
+    margin: 0px 12px;
     white-space: pre-line;
+    width: 100%;
   }
   & > textarea {
     min-height: 40px;
@@ -71,7 +72,7 @@
 
   @media screen and (max-width: $media-phone) {
     & > span {
-      margin-left: 8px;
+      margin: 0px 8px;
     }
   }
 }
