[Fix] useWindowDimension > initial State window error

--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -9,7 +9,7 @@ $delayandduration: 4;
   border: 1px solid $back-color-main;
   overflow: hidden;
 
-  & > div {
+  & > span {
     position: unset !important;
 
     & > img {
