--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -1,5 +1,4 @@
 .categoryContainer {
-  // width: 100%;
   font-size: 22px;
   margin: 0;
   display: flex;
@@ -11,6 +10,7 @@
     font-size: 22px;
     max-width: 10vw;
     border: 1px solid white;
+
     &:focus {
       border: 1px solid black;
     }
@@ -18,7 +18,6 @@
 
   select {
     font-size: 22px;
-    height: 100%;
     border: 0.5px solid white;
     background-color: white;
   }
@@ -31,6 +30,26 @@
     width: 10vw;
     margin: 0px;
     font-size: 16px;
+  }
+
+  @media screen and (max-width: $media-phone) {
+    input {
+      display: block;
+      font-size: 16px;
+      min-width: 220px;
+      // max-width: 10vw;
+      border: 1px solid white;
+
+      &:focus {
+        border: 1px solid black;
+      }
+    }
+
+    select {
+      font-size: 16px;
+      border: 0.5px solid white;
+      background-color: white;
+    }
   }
 }
 
