--- a/styles/GNB.module.scss
+++ b/styles/GNB.module.scss
@@ -1,5 +1,5 @@
 .navContainer {
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
   bottom: 0px;
@@ -9,7 +9,7 @@
   align-items: center;
   width: 80vw;
   max-width: 512px;
-  height: 100%;
+  // height: 100%;
   border-right: 1px solid black;
   background-color: white;
   z-index: 100;
@@ -26,9 +26,9 @@
     }
     // border-top: 1px solid gray;
 
-    &:hover {
-      background-color: #8181ac;
-    }
+    // &:hover {
+    //   background-color: #8181ac;
+    // }
   }
 }
 
