[Modify] Comment > 댓글 상 유저 프로필클릭 시 해당 유저페이지로 이동

--- a/styles/CommentBox.module.scss
+++ b/styles/CommentBox.module.scss
@@ -53,10 +53,13 @@
   padding: 1vh 0;
 
   & > .profileWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    & > a {
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   & > span {
