--- a/styles/main/MainPage.module.scss
+++ b/styles/main/MainPage.module.scss
@@ -56,8 +56,9 @@
     }
     &:nth-child(13n - 12),
     &:nth-child(13n - 11) {
-      grid-column: auto/span 2;
-      grid-row: auto/span 2;
+      max-height: 512px;
+      grid-column: auto / span 2;
+      grid-row: auto / span 2;
     }
     &:nth-child(13n - 12) {
       margin-right: -1vw;
@@ -70,28 +71,33 @@
     &:nth-child(13n + 4),
     &:nth-child(13n + 5),
     &:nth-child(13n + 6) {
+      max-height: 256px;
       grid-column: auto/span 1;
       grid-row: auto/span 1;
     }
 
     &:nth-child(13n + 7),
     &:nth-child(13n + 8) {
+      max-height: 512px;
       grid-column: auto/span 2;
       grid-row: auto/span 2;
     }
     &:nth-child(13n + 9),
     &:nth-child(13n + 10) {
+      max-height: 256px;
       grid-column: auto/span 1;
       grid-row: auto/span 1;
     }
 
     &:nth-child(13n + 12),
     &:nth-child(13n + 13) {
+      max-height: 256px;
       grid-column: auto/span 1;
       grid-row: auto/span 1;
     }
 
     &:nth-child(13n + 11) {
+      max-height: 512px;
       grid-column: auto/span 2;
       grid-row: auto/span 2;
     }
