--- a/styles/user/component/UserContentsBlockType.module.scss
+++ b/styles/user/component/UserContentsBlockType.module.scss
@@ -1,16 +1,15 @@
 .userContentsBlockList {
   display: grid;
   // min-height: calc(15.6vw * 3 + 12px * 3 + 0.4vw * 2);
-  grid-template-rows: repeat(3, 21vw);
-  grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
-  row-gap: 0.4vw;
-  column-gap: 0.4vw;
-
-  // margin: 0px 0px 12px 12px;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 1vw;
+  column-gap: 1vw;
 
   & > li {
     position: relative;
     border: 1px solid $back-color-main;
+
     & > a {
       & > div:last-child {
         visibility: hidden;
@@ -44,19 +43,12 @@
   }
 
   @media screen and (max-width: $media-tablet) {
-    grid-template-rows: repeat(3, 32.6vw);
-    grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 0.1vw * 3));
     row-gap: 0.1vw;
     column-gap: 0.1vw;
     width: 100%;
   }
 
   @media screen and (max-width: $media-phone) {
-    // grid-template-rows: repeat(3, 20.6vw);
-    grid-template-rows: repeat(auto-fill, minmax(110px, 1fr));
-    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-
-    // grid-template-columns: repeat(3, 20.6vw);
     row-gap: 0.1vw;
     column-gap: 0.1vw;
   }
