--- a/styles/user/User.module.scss
+++ b/styles/user/User.module.scss
@@ -38,7 +38,7 @@
 
 .userInfoWrapper {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 
   & > div:nth-child(2) {
     margin-left: 50px;
