[Fix] Circle Image > 여백 발생 현상

--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -354,10 +354,10 @@ $delayandduration: 4;
 
 .smallCircleProfileWrapper {
   position: static;
+  display: flex;
+  align-items: center;
   border-radius: 100%;
   overflow: hidden;
-  width: fit-content;
-  height: fit-content;
 }
 
 .gridImage {
