[Modify] NextImage > 설정값 변경

--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -356,6 +356,7 @@ $delayandduration: 4;
   position: static;
   display: flex;
   align-items: center;
+  justify-content: center;
   border-radius: 100%;
   overflow: hidden;
 }
