--- a/styles/crew/CrewProfile.module.scss
+++ b/styles/crew/CrewProfile.module.scss
@@ -18,6 +18,9 @@
   justify-content: center;
 
   & > .imgWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 100%;
     overflow: hidden;
     border: 1px solid black;
@@ -33,10 +36,6 @@
     & > h2 {
       margin: 8px 0px;
       color: black;
-
-      // &:hover {
-      //   color: $font-color-main;
-      // }
     }
   }
 }
@@ -62,7 +61,6 @@
   }
 
   @media screen and (max-width: $media-phone) {
-    // right: calc(20px + 12px);
     right: 12px;
     top: 0px;
 
