--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -182,6 +182,14 @@ $delayandduration: 4;
   line-height: 1.75rem;
   font-weight: 300;
   height: calc(1.1em + 2px);
+
+  @media screen and (max-width: $media-phone) {
+    height: 32px;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1.5;
+    width: 100%;
+  }
 }
 
 .input:focus {
@@ -196,6 +204,10 @@ $delayandduration: 4;
 
   label {
     margin: 0.6rem 0;
+  }
+
+  @media screen and (max-width: $media-phone) {
+    font-size: 12px;
   }
 }
 
