[Add] 새로운 크루 생성 Query연결 및 UI

--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -202,8 +202,17 @@ $delayandduration: 4;
   flex-direction: column;
   width: 100%;
 
-  label {
-    margin: 0.6rem 0;
+  & > label {
+    font-size: 16px;
+  }
+
+  & > input {
+    height: 32px;
+    margin: 8px 0px;
+  }
+
+  & > button {
+    margin: 8px 0px;
   }
 
   @media screen and (max-width: $media-phone) {
