[Modify] Talk, Crew Ttile css - 크기 및 간격 조정

--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -1,6 +1,11 @@
 $lines: 16;
 $delayandduration: 4;
 
+.mainPageTitle {
+  margin: 24px 0px;
+  font-size: 32px;
+}
+
 .imageContainer {
   width: 100%;
   max-width: 80px;
